# Impulse

./: Cargo.toml  EDGE_CASE_COVERAGE_TESTS_SUMMARY.md  NEW_TESTS_SUMMARY.md  PLAN.md  additional_edge_case_tests.rs  debug_math.rs  debug_overflow  debug_test.rs  temp_test.rs  test_overflow.rs
src/: additional_boundary_tests.rs  additional_comprehensive_edge_case_tests.rs  additional_comprehensive_tests.rs  additional_edge_case_boundary_tests.rs  additional_edge_case_tests.rs  additional_edge_case_tests_boundary_conditions.rs  additional_edge_case_tests_boundary_scenarios.rs  additional_edge_case_tests_comprehensive.rs  additional_edge_case_tests_extended.rs  additional_edge_case_tests_final.rs  additional_edge_case_tests_focused.rs  additional_edge_case_tests_new.rs  additional_edge_case_tests_new_new.rs  additional_edge_case_tests_new_new_new.rs  additional_edge_case_tests_new_new_new_new.rs  additional_edge_case_tests_new_new_new_new_new.rs  additional_edge_case_tests_newer.rs  additional_edge_case_tests_newest.rs  additional_edge_cases.rs  additional_edge_test_cases.rs  additional_focused_edge_case_tests.rs  additional_ir_edge_case_tests.rs  additional_tests.rs  additional_utility_boundary_tests.rs  advanced_boundary_coverage_tests.rs  advanced_boundary_tests.rs  advanced_boundary_tests_new.rs  advanced_comprehensive_boundary_tests.rs  advanced_comprehensive_edge_tests.rs  advanced_comprehensive_tests.rs  advanced_critical_boundary_tests_final.rs  advanced_edge_boundary_tests.rs  advanced_edge_case_tests.rs  advanced_edge_case_tests_comprehensive.rs  (+150 more)
src/ir/: mod.rs  (+1 more)
(+11 files in other folders)
