[package]
name = "impulse"
version = "0.1.0"
edition = "2021"
authors = ["AI Compiler Team"]
description = "An AI Heterogeneous Computing Compiler based on MLIR for CPU/GPU/NPU"
license = "MIT"

[[bin]]
name = "impulse-compiler"
path = "src/main.rs"

[lib]
name = "impulse"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1.7"
half = { version = "2.3", features = ["num-traits"] }
bincode = "1.3"
num_cpus = "1.13"
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"

# Optional dependencies
rustacuda = { version = "0.1", optional = true }
ocl = { version = "0.19", optional = true }

[dev-dependencies]
criterion = "0.5"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["cpu"]
cpu = []
cuda = ["dep:rustacuda"]
opencl = ["dep:ocl"]
testing = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"